Add global MCP tool management: introduce application-level settings for enabling/disabling tools and unify visibility control across projects and the MCP server.